--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/stack": "^7.6.16",
     "axios": "^1.13.2",
     "expo": "~54.0.32",
+    "expo-document-picker": "~14.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.563.0",
     "react": "19.1.0",
