--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.6.16",
     "axios": "^1.13.2",
+    "babel-preset-expo": "~54.0.10",
     "expo": "~54.0.32",
+    "expo-blur": "~15.0.8",
     "expo-document-picker": "~14.0.8",
+    "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.563.0",
     "react": "19.1.0",
@@ -30,6 +35,7 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.10",
     "typescript": "~5.9.2"
   },
   "private": true
