--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-expo": "~54.0.10",
     "expo": "~54.0.32",
     "expo-blur": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
