--- a/app.json
+++ b/app.json
@@ -16,18 +16,25 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.vehiclemanagement.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "usesCleartextTraffic": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "@react-native-community/datetimepicker"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "030b7cfd-e9b5-4652-b939-5711612b72a2"
+      }
+    }
   }
 }
